fix alignment of string input fields on workplan

--- a/app/stylesheets/partials/_tables.sass
+++ b/app/stylesheets/partials/_tables.sass
@@ -305,11 +305,14 @@ table.workplan
   input[type=text]
     padding: 4px 2px !important
     width: 80px
-    text-align: right
     float: right
     &.purpose_search
       margin: 1px
       padding: 0 !important
+
+    &.string
+      text-align: left
+
   .new_activity, .new_project, .new_funder, .new_implementer
     background: $filler
     .inline-errors
